# playground

./: .gitignore  LICENSE  README.md  pyproject.toml
fine-tuning/: text-emb-for-domain.ipynb
misc/: git_commands.md
